refactoring view event apis
